--- a/01-basics-01-starting-project/index.html
+++ b/01-basics-01-starting-project/index.html
@@ -10,7 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
+    <script src="assets/scripts/vendor.js" defer></script>
+    <script src="assets/scripts/app.js" defer></script>
   </head>
+
   <body>
     <header>
       <h1>The Unconventional Calculator</h1>
@@ -28,9 +31,6 @@
     <section id="results">
       <h2 id="current-calculation">0</h2>
       <h2>Result: <span id="current-result">0</span></h2>
-    </section>
-
-    <script src="assets/scripts/vendor.js"></script>
-    <script src="assets/scripts/app.js"></script>
+    </section 
   </body>
 </html>
